# policylens-multiagent-ai-policy-research-system

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Procfile  README.md  alembic.ini  design-spec.md  docker-compose.yml  improved-ai-copyright-lawsuits-policy-risks-2026-06-25.md  issues-log.md  portfolio-notes.md  pyproject.toml
.claude/: settings.local.json
api/: main.py
db/: models.py
db/migrations/: env.py
db/migrations/versions/: 7a885b67938e_add_title_to_research_runs.py  9ef689784046_add_authority_score_to_eval_reports.py  cce81f2a4b9d_add_pgvector_report_chunks.py
engine/: models.py  orchestrator.py  state.py  usage.py
engine/memory/: checkpointer.py  compaction.py  rag.py
engine/nodes/: chat.py  clarify.py  compact.py  debate.py  evidence_audit.py  plan.py  subagent.py  synthesize.py  verify_citations.py
engine/tools/: fetch.py  search.py
eval/: __main__.py  citation_coverage.py  faithfulness.py  grounding.py  harness.py  rag_answer_relevance.py  rag_context_precision.py  rag_context_sufficiency.py  rag_eval.py  rag_faithfulness.py  report_parsing.py  schema.py  source_authority.py
scripts/: run_benchmark.py
tests/: conftest.py  test_debate.py  test_eval_harness.py  test_evidence_audit.py  test_fetch_tool.py  test_phase1_smoke.py  test_phase2_smoke.py  test_search_tool.py  test_source_authority.py  test_subagent_source_diversity.py
web/app/: globals.css  layout.tsx  page.tsx
web/app/components/: EvalDashboard.tsx
