[project]
name = "deep-research"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # LangChain footprint: only these three, NOT the monolithic langchain package
    "langgraph>=0.5",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.0",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "asyncpg>=0.30",       # async driver (runtime)
    "psycopg[binary]>=3.2",  # sync driver (alembic + langgraph checkpointer)
    # Tools
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "markdownify>=0.13",
    "tavily-python>=0.5",
    # Utilities
    "pydantic>=2.10",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["engine", "api", "db", "eval"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
